--- a/Practica.2/Práctica_2_sin_soluciones.ipynb
+++ b/Practica.2/Práctica_2_sin_soluciones.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
     "        # TODO recorremos cada vecino de la variable vecinos utilizando un bucle for \n",
     "        for vecino in vecinos:\n",
     "            # TODO comprobamos que NO ha sido visitado -> llamamos a la función es_visitado\n",
-    "            if (es_visitado(posicion_actual, posiciones_visitadas) == False):\n",
+    "            if (not es_visitado(vecino, posiciones_visitadas)):\n",
     "                # En caso de no haber sido visitado, establecemos que el padre del nodo es la posición actual.\n",
     "                vecino.set_parent(posicion_actual)          \n",
     "                # TODO Lo añadimos a la cola_fifo para procesar sus vecinos con posterioridad.\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,12 +251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<maze_world.Point object at 0x000002466FD43A60>\n"
+     ]
+    }
+   ],
    "source": [
     "posiciones_visitadas = []\n",
-    "salida = ejecutar_bfs(laberinto, posicion, posiciones_visitadas)"
+    "salida = ejecutar_bfs(laberinto, posicion, posiciones_visitadas)\n",
+    "print(salida)"
    ]
   },
   {
@@ -268,24 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'parent'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-103-80981565e6c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmzw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msalida\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\source\\repos\\Sistemas.Inteligentes\\Practica.2\\maze_world.py\u001b[0m in \u001b[0;36mget_path\u001b[1;34m(point)\u001b[0m\n\u001b[0;32m     90\u001b[0m     \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m     \u001b[0mcurrent_point\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 92\u001b[1;33m     \u001b[1;32mwhile\u001b[0m \u001b[0mcurrent_point\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparent\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     93\u001b[0m         \u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrent_point\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m         \u001b[0mcurrent_point\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcurrent_point\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparent\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'parent'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<maze_world.Point object at 0x000002466FD43A60>, <maze_world.Point object at 0x000002466FD43640>, <maze_world.Point object at 0x000002466FD43880>, <maze_world.Point object at 0x000002466FD43190>, <maze_world.Point object at 0x000002466FD437C0>, <maze_world.Point object at 0x000002466FD43610>, <maze_world.Point object at 0x000002466FD43460>, <maze_world.Point object at 0x000002466FD43430>]\n"
      ]
     }
    ],
    "source": [
-    "mzw.get_path(salida)"
+    "path = mzw.get_path(salida)\n",
+    "print(path)"
    ]
   },
   {
@@ -297,10 +302,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(path)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,11 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@0000\n",
+      "@###0\n",
+      "@#0#0\n",
+      "@#@00\n",
+      "@@@00\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "x = laberinto.overlay_points_on_map(path)"
    ]
   },
   {
@@ -327,20 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "print(str())"
+    "camino = mzw.get_path_cost(salida)"
    ]
   },
   {
@@ -352,10 +374,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 , 0\n",
+      "x: 0\n",
+      "y: 0\n",
+      "------------\n",
+      "1 , 0\n",
+      "x: 1\n",
+      "y: 0\n",
+      "------------\n",
+      "2 , 0\n",
+      "x: 2\n",
+      "y: 0\n",
+      "------------\n",
+      "3 , 0\n",
+      "x: 3\n",
+      "y: 0\n",
+      "------------\n",
+      "4 , 0\n",
+      "x: 4\n",
+      "y: 0\n",
+      "------------\n",
+      "4 , 1\n",
+      "x: 4\n",
+      "y: 1\n",
+      "------------\n",
+      "4 , 2\n",
+      "x: 4\n",
+      "y: 2\n",
+      "------------\n",
+      "3 , 2\n",
+      "x: 3\n",
+      "y: 2\n",
+      "------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in path:\n",
+    "    i.print()\n",
+    "    print(f\"x: {i.x}\")\n",
+    "    print(f\"y: {i.y}\")\n",
+    "    print(\"------------\")"
+   ]
   },
   {
    "cell_type": "code",
