--- a/Practica.Grupal/16_pr1.ipynb
+++ b/Practica.Grupal/16_pr1.ipynb
@@ -96,6 +96,7 @@
    "outputs": [],
    "source": [
     "from collections import deque\n",
+    "import math \n",
     "\n",
     "mat = [\n",
     "    [-1, -9, 0, -1, 0],\n",
@@ -103,46 +104,40 @@
     "    [2, 0, 0, -6, 0],\n",
     "    [0, -7, -3, 5, -4]\n",
     "]\n",
-    "\n",
-    "def ejecutar_bfs(laberinto, posicion_actual, posiciones_visitadas):\n",
-    "    \n",
-    "    # deque es un tipo de cola FIFO de alto rendimiento \n",
-    "    q1 = deque()\n",
-    "    q1.append()\n",
-    "    # TODO es necesario añadir la posicion_actual a la cola\n",
-    "    cola_fifo.append(posicion_actual)\n",
-    "    # TODO es necesario añadir la posicion_actual a las posiciones visitadas\n",
-    "    posiciones_visitadas.append(posicion_actual)\n",
-    "    # Es necesario buscar mientras haya elementos en la cola_fifo\n",
-    "    while cola_fifo:\n",
-    "        # Obtenemos el primer elemento de la cola\n",
-    "        posicion_actual = cola_fifo.popleft()     \n",
-    "        # Obtenemos los vecinos de la posicion actual\n",
-    "        vecinos = laberinto.get_neighbors(posicion_actual)      \n",
-    "        # TODO recorremos cada vecino de la variable vecinos utilizando un bucle for \n",
-    "        for vecino in vecinos:\n",
-    "            # TODO comprobamos que NO ha sido visitado -> llamamos a la función es_visitado\n",
-    "            if (not es_visitado(vecino, posiciones_visitadas)):\n",
-    "                # En caso de no haber sido visitado, establecemos que el padre del nodo es la posición actual.\n",
-    "                vecino.set_parent(posicion_actual)          \n",
-    "                # TODO Lo añadimos a la cola_fifo para procesar sus vecinos con posterioridad.\n",
-    "                cola_fifo.append(vecino)\n",
-    "                # TODO Lo añadimos a la posiciones_visitadas para procesar sus vecinos con posterioridad.\n",
-    "                posiciones_visitadas.append(vecino)\n",
-    "                # De acuerdo con el modelado del mundo, * es la meta, en ese caso devolvemos vecino\n",
-    "                if laberinto.get_current_point_value(vecino) == '*':\n",
-    "                    return vecino\n",
-    "    # Si recorremos todo el laberinto y no encontramos solución, devolvemos el siguiente mensaje:\n",
-    "    return 'No se ha encontrado ninguna solución.'\n",
-    "\n",
-    "def es_visitado(posicion_actual, posiciones_visitadas):\n",
-    "    # TODO recorremos cada elemento en la lista de posiciones_vistadas\n",
-    "    for posicion_visitada in posiciones_visitadas:\n",
-    "        # TODO Si el argumento x e y de la posición es el mismo que para la posicion_actual, devolvemos True\n",
-    "        if ((posicion_actual.x == posicion_visitada.x) and (posicion_actual.y == posicion_visitada.y)):\n",
-    "            return True\n",
-    "    # En caso contrario devolvemos False\n",
-    "    return False"
+    "q1 = []\n",
+    "anchura = 0\n",
+    "altura = 0\n",
+    "for i in mat:\n",
+    "    anchura = 0\n",
+    "    for j in i:\n",
+    "        if j > 0:\n",
+    "            q1.append([anchura,altura])\n",
+    "        anchura = anchura+1\n",
+    "    altura = altura+1\n",
+    "q2 = q1\n",
+    "q1 = []\n",
+    "while q2 != []:\n",
+    "    primer_valor = q2[0]\n",
+    "    if primer_valor[0]-1 >= 0:\n",
+    "        if mat[primer_valor[0]-1][primer_valor[1]]<0:\n",
+    "            mat[primer_valor[0]-1][primer_valor[1]] = abs(mat[primer_valor[0]-1][primer_valor[1]])\n",
+    "            q1.append([primer_valor[0]-1, primer_valor[1]])\n",
+    "    if primer_valor[0]+1 < len(mat):\n",
+    "        if mat[primer_valor[0]+1][primer_valor[1]]<0:\n",
+    "            mat[primer_valor[0]+1][primer_valor[1]] = abs(mat[primer_valor[0]+1][primer_valor[1]])\n",
+    "            q1.append([primer_valor[0]+1, primer_valor[1]])\n",
+    "    if primer_valor[1]-1 >= 0:\n",
+    "        if mat[primer_valor[0]][primer_valor[1]-1]<0:\n",
+    "            mat[primer_valor[0]][primer_valor[1]-1] = abs(mat[primer_valor[0]][primer_valor[1]-1])\n",
+    "            q1.append([primer_valor[0], primer_valor[1]-1])\n",
+    "    if primer_valor[1]+1 < len(mat):\n",
+    "        if mat[primer_valor[0]][primer_valor[1]+1]<0:\n",
+    "            mat[primer_valor[0]][primer_valor[1]+1] = abs(mat[primer_valor[0]][primer_valor[1]+1])\n",
+    "            q1.append([primer_valor[0], primer_valor[1]+1])\n",
+    "if q1 == []:\n",
+    "    print(pasos)\n",
+    "    pasos= pasos - 1\n",
+    "pasos = pasos + 1"
    ]
   },
   {
@@ -155,6 +150,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
