--- a/Practica.2/Práctica_2_sin_soluciones.ipynb
+++ b/Practica.2/Práctica_2_sin_soluciones.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<maze_world.Point object at 0x000002466FD43A60>\n"
+      "<maze_world.Point object at 0x0000027A38F92490>\n"
      ]
     }
    ],
@@ -277,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<maze_world.Point object at 0x000002466FD43A60>, <maze_world.Point object at 0x000002466FD43640>, <maze_world.Point object at 0x000002466FD43880>, <maze_world.Point object at 0x000002466FD43190>, <maze_world.Point object at 0x000002466FD437C0>, <maze_world.Point object at 0x000002466FD43610>, <maze_world.Point object at 0x000002466FD43460>, <maze_world.Point object at 0x000002466FD43430>]\n"
+      "[<maze_world.Point object at 0x0000027A38F92490>, <maze_world.Point object at 0x0000027A38F92040>, <maze_world.Point object at 0x0000027A38F92280>, <maze_world.Point object at 0x0000027A38F92220>, <maze_world.Point object at 0x0000027A38F921C0>, <maze_world.Point object at 0x0000027A38F92EE0>, <maze_world.Point object at 0x0000027A38F48AC0>, <maze_world.Point object at 0x0000027A38F5FCA0>]\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "8"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
