--- a/Practica.Grupal/16_pr1.ipynb
+++ b/Practica.Grupal/16_pr1.ipynb
@@ -91,12 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[-1 -9  0 -1  0]\n [-8 -3 -2  9 -7]\n [ 2  0  0 -6  0]\n [ 0 -7 -3  5 -4]]\nResultado: \n[[-1 -9  0  1  0]\n [ 8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 1\nResultado: \n[[ 1 -9  0  1  0]\n [ 8  3  2  9  7]\n [ 2  0  0  6  0]\n [ 0  7  3  5  4]]\nPasos: 2\nResultado: \n[[1 9 0 1 0]\n [8 3 2 9 7]\n [2 0 0 6 0]\n [0 7 3 5 4]]\nPasos: 3\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import deque\n",
-    "import math \n",
+    "import math\n",
+    "import numpy as np\n",
     "\n",
     "mat = [\n",
     "    [-1, -9, 0, -1, 0],\n",
@@ -104,40 +113,88 @@
     "    [2, 0, 0, -6, 0],\n",
     "    [0, -7, -3, 5, -4]\n",
     "]\n",
-    "q1 = []\n",
-    "anchura = 0\n",
-    "altura = 0\n",
-    "for i in mat:\n",
-    "    anchura = 0\n",
-    "    for j in i:\n",
-    "        if j > 0:\n",
-    "            q1.append([anchura,altura])\n",
-    "        anchura = anchura+1\n",
-    "    altura = altura+1\n",
-    "q2 = q1\n",
-    "q1 = []\n",
-    "while q2 != []:\n",
-    "    primer_valor = q2[0]\n",
-    "    if primer_valor[0]-1 >= 0:\n",
-    "        if mat[primer_valor[0]-1][primer_valor[1]]<0:\n",
-    "            mat[primer_valor[0]-1][primer_valor[1]] = abs(mat[primer_valor[0]-1][primer_valor[1]])\n",
-    "            q1.append([primer_valor[0]-1, primer_valor[1]])\n",
-    "    if primer_valor[0]+1 < len(mat):\n",
-    "        if mat[primer_valor[0]+1][primer_valor[1]]<0:\n",
-    "            mat[primer_valor[0]+1][primer_valor[1]] = abs(mat[primer_valor[0]+1][primer_valor[1]])\n",
-    "            q1.append([primer_valor[0]+1, primer_valor[1]])\n",
-    "    if primer_valor[1]-1 >= 0:\n",
-    "        if mat[primer_valor[0]][primer_valor[1]-1]<0:\n",
-    "            mat[primer_valor[0]][primer_valor[1]-1] = abs(mat[primer_valor[0]][primer_valor[1]-1])\n",
-    "            q1.append([primer_valor[0], primer_valor[1]-1])\n",
-    "    if primer_valor[1]+1 < len(mat):\n",
-    "        if mat[primer_valor[0]][primer_valor[1]+1]<0:\n",
-    "            mat[primer_valor[0]][primer_valor[1]+1] = abs(mat[primer_valor[0]][primer_valor[1]+1])\n",
-    "            q1.append([primer_valor[0], primer_valor[1]+1])\n",
-    "if q1 == []:\n",
-    "    print(pasos)\n",
-    "    pasos= pasos - 1\n",
-    "pasos = pasos + 1"
+    "\n",
+    "print(np.matrix(mat))\n",
+    "\n",
+    "class Point:\n",
+    "    \n",
+    "    def __init__(self, x, y, mat):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.valor = mat[x][y]\n",
+    "        self.cost = math.inf\n",
+    "\n",
+    "    def actualizar_valor(self, valor):\n",
+    "        self.valor = valor\n",
+    "\n",
+    "    def set_cost(self, c):\n",
+    "        self.cost = c\n",
+    "\n",
+    "    def print(self):\n",
+    "        print(self.x, ',', self.y)\n",
+    "\n",
+    "NORTH = Point(0, 1, mat)\n",
+    "SOUTH = Point(0, -1, mat)\n",
+    "EAST = Point(1, 0, mat)\n",
+    "WEST = Point(-1, 0, mat)\n",
+    "\n",
+    "class Aplicar_teorema:\n",
+    "\n",
+    "    def __init__(self, anchura_matriz, altura_matriz, mat):\n",
+    "        self.anchura_matriz = anchura_matriz\n",
+    "        self.altura_matriz = altura_matriz\n",
+    "        self._mat = mat\n",
+    "        self.ejercutar_busqueda_dfs()\n",
+    "\n",
+    "    def ejercutar_busqueda_dfs(self):\n",
+    "        pasos = 0\n",
+    "        cola_puntos = deque()\n",
+    "        positivo1 = Point(2, 0, self._mat)\n",
+    "        positivo2 = Point(1, 3, self._mat)\n",
+    "        positivo3 = Point(3, 3, self._mat)\n",
+    "        cola_puntos.append(positivo1)\n",
+    "        cola_puntos.append(positivo2)\n",
+    "        cola_puntos.append(positivo3)\n",
+    "\n",
+    "        cola_puntos_intento = deque()\n",
+    "        while pasos < 3:\n",
+    "            cola_puntos_intento = cola_puntos.copy()\n",
+    "            puntos_alrededores_positivos = []\n",
+    "            for punto in cola_puntos:    \n",
+    "                puntos_alrededores_positivos = self.devolver_puntos_alrededores_positivos(punto)\n",
+    "                for punto_alrededor in puntos_alrededores_positivos:\n",
+    "                    cola_puntos_intento.append(punto_alrededor)\n",
+    "            cola_puntos.clear()\n",
+    "            cola_puntos = cola_puntos_intento.copy()\n",
+    "            cola_puntos_intento.clear()\n",
+    "            pasos = pasos + 1\n",
+    "            print(\"Resultado: \")\n",
+    "            print(np.matrix(self._mat))\n",
+    "            print(f\"Pasos: {pasos}\")\n",
+    "\n",
+    "\n",
+    "    def devolver_puntos_alrededores_positivos(self, punto_actual):\n",
+    "        posiciones_alrededores = []\n",
+    "        posibles_alrededores = [[NORTH.x, NORTH.y], [SOUTH.x, SOUTH.y], [EAST.x, EAST.y], [WEST.x, WEST.y]]\n",
+    "        for punto_alrededor in posibles_alrededores: # Norte el ultimo\n",
+    "            if (punto_actual.x + punto_alrededor[0] <= 3 and punto_actual.y + punto_alrededor[1] <= 4):\n",
+    "                punto_cardinal = Point(punto_actual.x + punto_alrededor[0], punto_actual.y + punto_alrededor[1], self._mat)\n",
+    "                if (0 <= punto_cardinal.x < self.anchura_matriz and 0 <= punto_cardinal.y < self.altura_matriz):\n",
+    "                    if (self.obtener_posicion_matriz(punto_cardinal) < 0):\n",
+    "                        nuevo_valor = self.sustituir_valor_matriz(punto_cardinal)\n",
+    "                        punto_cardinal.actualizar_valor(nuevo_valor)\n",
+    "                        posiciones_alrededores.append(punto_cardinal)\n",
+    "        return posiciones_alrededores\n",
+    "\n",
+    "\n",
+    "    def obtener_posicion_matriz(self, current_point):\n",
+    "        return self._mat[current_point.x][current_point.y]\n",
+    "    \n",
+    "    def sustituir_valor_matriz(self, punto_cardinal):\n",
+    "            self._mat[punto_cardinal.x][punto_cardinal.y] = abs(self._mat[punto_cardinal.x][punto_cardinal.y])\n",
+    "            return self._mat[punto_cardinal.x][punto_cardinal.y]\n",
+    "\n",
+    "aplicar_dfs = Aplicar_teorema(4, 5, mat)"
    ]
   },
   {
@@ -197,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
