practica grupal 1 terminada

--- a/Practica.Grupal/16_pr1.ipynb
+++ b/Practica.Grupal/16_pr1.ipynb
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[-1 -9  0 -1  0]\n [-8 -3 -2  9 -7]\n [ 2  0  0 -6  0]\n [ 0 -7 -3  5 -4]]\nResultado: \n[[-1 -9  0  1  0]\n [ 8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 1\nResultado: \n[[ 1 -9  0  1  0]\n [ 8  3  2  9  7]\n [ 2  0  0  6  0]\n [ 0  7  3  5  4]]\nPasos: 2\nResultado: \n[[1 9 0 1 0]\n [8 3 2 9 7]\n [2 0 0 6 0]\n [0 7 3 5 4]]\nPasos: 3\n"
+      "[[-1 -9  0 -1  0]\n [-8 -3 -2  9 -7]\n [ 2  0  0 -6  0]\n [ 0 -7 -3  5 -4]]\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 1\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 2\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 3\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 4\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 5\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
     "        cola_puntos.append(positivo3)\n",
     "\n",
     "        cola_puntos_intento = deque()\n",
-    "        while pasos < 3:\n",
+    "        while pasos < 5:\n",
     "            cola_puntos_intento = cola_puntos.copy()\n",
     "            puntos_alrededores_positivos = []\n",
     "            for punto in cola_puntos:    \n",
@@ -180,12 +180,18 @@
     "            if (punto_actual.x + punto_alrededor[0] <= 3 and punto_actual.y + punto_alrededor[1] <= 4):\n",
     "                punto_cardinal = Point(punto_actual.x + punto_alrededor[0], punto_actual.y + punto_alrededor[1], self._mat)\n",
     "                if (0 <= punto_cardinal.x < self.anchura_matriz and 0 <= punto_cardinal.y < self.altura_matriz):\n",
-    "                    if (self.obtener_posicion_matriz(punto_cardinal) < 0):\n",
+    "                    if (self.obtener_posicion_matriz(punto_cardinal) < 0 and self.modulo_punto_actual_mayor_que_cardinal(\n",
+    "                        punto_actual = punto_actual, punto_cardinal = punto_cardinal) == True):\n",
     "                        nuevo_valor = self.sustituir_valor_matriz(punto_cardinal)\n",
     "                        punto_cardinal.actualizar_valor(nuevo_valor)\n",
     "                        posiciones_alrededores.append(punto_cardinal)\n",
     "        return posiciones_alrededores\n",
     "\n",
+    "    def modulo_punto_actual_mayor_que_cardinal(self, punto_actual, punto_cardinal):\n",
+    "        if(abs(self.obtener_posicion_matriz(punto_cardinal)) < abs(self.obtener_posicion_matriz(punto_actual))):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
     "\n",
     "    def obtener_posicion_matriz(self, current_point):\n",
     "        return self._mat[current_point.x][current_point.y]\n",
