--- a/Practica.Grupal/16_pr1.ipynb
+++ b/Practica.Grupal/16_pr1.ipynb
@@ -157,7 +157,7 @@
     "        cola_puntos.append(positivo3)\n",
     "\n",
     "        cola_puntos_intento = deque()\n",
-    "        while pasos < 5:\n",
+    "        while pasos < 5: # Hemos probado con 5 pasos si logra hacerlo, por ejemplo\n",
     "            cola_puntos_intento = cola_puntos.copy()\n",
     "            puntos_alrededores_positivos = []\n",
     "            for punto in cola_puntos:    \n",
@@ -207,13 +207,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "¿Cuál es la complejidad de la operación en notación Big O?"
+    "## Conclusiones"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Con un bucle limitado a 5 pasos hemos probado sí es capaz de resolver la matriz con la opción del módulo. Como podemos ver en el resultado a partir del paso 1 no es posible resolverlo. La causa es sencilla, siendo en valor del negativo con módulo más superior 9 no es posible que se resuelva. No es han incluido comentarios en el código por que creemos que el código es lo suficientemente légible y se entiende perfectamente."
+   ]
   },
   {
    "cell_type": "code",
