--- a/Practica.Grupal/16_pr1.ipynb
+++ b/Practica.Grupal/16_pr1.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con un bucle limitado a 5 pasos hemos probado sí es capaz de resolver la matriz con la opción del módulo. Como podemos ver en el resultado a partir del paso 1 no es posible resolverlo. La causa es sencilla, siendo en valor del negativo con módulo más superior 9 no es posible que se resuelva. No es han incluido comentarios en el código por que creemos que el código es lo suficientemente légible y se entiende perfectamente."
+    "Con un bucle limitado a 5 pasos hemos probado sí es capaz de resolver la matriz con la opción del módulo. Como podemos ver en el resultado, a partir del paso 1 no es posible resolverlo. La causa es sencilla, siendo en valor del negativo con módulo más superior 9 no es posible que se resuelva. No es han incluido comentarios en el código por que creemos que el código es lo suficientemente légible y se entiende perfectamente."
    ]
   },
   {
