--- a/Practica.1/practica_1_asier_marin.ipynb
+++ b/Practica.1/practica_1_asier_marin.ipynb
@@ -226,6 +226,13 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Date             142193\nLocation         142193\nMinTemp          141556\nMaxTemp          141871\nRainfall         140787\nEvaporation       81350\nSunshine          74377\nWindGustDir      132863\nWindGustSpeed    132923\nWindDir9am       132180\nWindDir3pm       138415\nWindSpeed9am     140845\nWindSpeed3pm     139563\nHumidity9am      140419\nHumidity3pm      138583\nPressure9am      128179\nPressure3pm      128212\nCloud9am          88536\nCloud3pm          85099\nTemp9am          141289\nTemp3pm          139467\nRainToday        140787\nRISK_MM          142193\nRainTomorrow     142193\ndtype: int64\n"
+     ]
+    },
+    {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
@@ -290,7 +297,7 @@
     }
    ],
    "source": [
-    "count = df.count()\n",
+    "print(df.count())\n",
     "\n",
     "# Voy a probar ordenarlo por Date por ejemplo.\n",
     "df.sort_values(by = ['Date'])"
@@ -721,7 +728,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "85.12561416519885\n"
+      "85.20904792806155\n"
      ]
     }
    ],
@@ -764,7 +771,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "84.43033280800964\n"
+      "84.24028923704458\n"
      ]
     }
    ],
@@ -807,14 +814,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "78.60387503476407\n"
+      "79.39186057291184\n"
      ]
     }
    ],
@@ -862,17 +869,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "85.17196625567813\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import svm\n",
     "\n",
