--- a/Practica.Grupal/16_pr1.ipynb
+++ b/Practica.Grupal/16_pr1.ipynb
@@ -95,10 +95,43 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[-1 -9  0 -1  0]\n [-8 -3 -2  9 -7]\n [ 2  0  0 -6  0]\n [ 0 -7 -3  5 -4]]\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 1\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 2\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 3\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 4\nResultado: \n[[-1 -9  0  1  0]\n [-8 -3  2  9  7]\n [ 2  0  0  6  0]\n [ 0 -7  3  5  4]]\nPasos: 5\n"
+      "[[-1 -9  0 -1  0]\n",
+      " [-8 -3 -2  9 -7]\n",
+      " [ 2  0  0 -6  0]\n",
+      " [ 0 -7 -3  5 -4]]\n",
+      "Resultado: \n",
+      "[[-1 -9  0  1  0]\n",
+      " [-8 -3  2  9  7]\n",
+      " [ 2  0  0  6  0]\n",
+      " [ 0 -7  3  5  4]]\n",
+      "Pasos: 1\n",
+      "Resultado: \n",
+      "[[-1 -9  0  1  0]\n",
+      " [-8 -3  2  9  7]\n",
+      " [ 2  0  0  6  0]\n",
+      " [ 0 -7  3  5  4]]\n",
+      "Pasos: 2\n",
+      "Resultado: \n",
+      "[[-1 -9  0  1  0]\n",
+      " [-8 -3  2  9  7]\n",
+      " [ 2  0  0  6  0]\n",
+      " [ 0 -7  3  5  4]]\n",
+      "Pasos: 3\n",
+      "Resultado: \n",
+      "[[-1 -9  0  1  0]\n",
+      " [-8 -3  2  9  7]\n",
+      " [ 2  0  0  6  0]\n",
+      " [ 0 -7  3  5  4]]\n",
+      "Pasos: 4\n",
+      "Resultado: \n",
+      "[[-1 -9  0  1  0]\n",
+      " [-8 -3  2  9  7]\n",
+      " [ 2  0  0  6  0]\n",
+      " [ 0 -7  3  5  4]]\n",
+      "Pasos: 5\n"
      ]
     }
    ],
@@ -262,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
